---
source: crates/math-core/tests/error_test.rs
expression: "x\\mskip-3mu y"
---
Error: Negative values are currently not supported.
   ╭─[ <input>:1:8 ]
   │
 1 │ x\mskip-3mu y
   │        ──┬─  
   │          ╰─── negative value here
───╯
